Add multiple tests, add Query and Command openAPI, redis, etc
