# controllers/kpiQuery.ctrl.js
@@ -16,56 +16,57 @@ const self = {
         }
         const {query: {q}} = req;
         const queryFilter = new Filter(q);
+        const response = [];
 
         try {
             const statsPromises = new Array();
             const kpis = await Kpis.find({'owner.type': owner.type, 'owner.id': owner.id});
-            const processPromises = kpis.map((kpi) => {
+            kpis.forEach((kpi) => {
                 statsPromises.push((callback) => {
-                    StatsService.get(kpi, queryFilter).then(() => {
+                    StatsService.get(kpi, queryFilter).then((data) => {
+                        response.push(data);
                         callback();
                     });
                 });
             });
-            async.parallel(processPromises, () => {
-                return res.sendStatus(200);
+            async.parallel(statsPromises, (err, results) => {
+                return res.json({kpis: response});
             });
         } catch (err) {
+            console.log(err);
             return res.sendStatus(400);
         }
     },
-    getKpi: async (req, res) => {
-        const {body: {category}} = req;
+    getKpi: (req, res) => {
+        const owner = {
+            type: req.payload.type,
+            id: req.payload.id,
+        };
+        if(!owner.type || !owner.id) {
+            return res.sendStatus(403);
+        }
         const {params: {id}} = req;
-        let dbCategory = await models.ToolCategories.findOne({where: {id: id}});
-        if(!dbCategory) {
-            return res.sendStatus(404);
+        if(!id) {
+            return res.sendStatus(422);
         }
-        if (dbCategory.SquadId) {
-            if(!UserRole.isSuperAdmin(req.user) && !(await models.UserSquads.findOne({where: {UserId: req.user.id, SquadId: dbCategory.SquadId, role: 'ADMIN'}}))) {
-                return res.sendStatus(403);
-            }
-            if(!(await models.Squads.findOne({where: {id: dbCategory.SquadId}}))) {
-                return res.sendStatus(404);
-            }
-            if(category.squadId && (await models.Squads.findOne({where: {id: category.SquadId}}))) {
-                dbCategory.SquadId = category.squadId;
-            }
-            dbCategory.UserId = null;
-        } else {
-            if(dbCategory.UserId && dbCategory.UserId !== req.user.id) {
-                return res.sendStatus(403);
-            }
-            dbCategory.UserId = req.user.id;
-            dbCategory.SquadId = null;
-        }
-        dbCategory.name = category.name;
-        dbCategory.order = category.order;
 
-        return dbCategory.save().then(() => {
-            res.json({category: dbCategory.toJSON()});
-        }).catch(() => {
-            res.sendStatus(400)
+        const {query: {q}} = req;
+        const queryFilter = new Filter(q);
+        Kpis.findOne({_id: id}).then((kpi) => {
+            if(!kpi) {
+                return res.sendStatus(404);
+            } else if(kpi.owner.id !== owner.id || kpi.owner.type !== owner.type) {
+                return res.sendStatus(403);
+            }
+            StatsService.get(kpi, queryFilter).then((data) => {
+                return res.json({kpi: data});
+            }).catch((err) => {
+                console.log(err);
+                return res.sendStatus(400);
+            });
+        }).catch((err) => {
+            console.log(err);
+            return res.sendStatus(400);
         });
     }
 };
